*** New command `proof-check-report' to generates the proof status
    of all opaque proofs. Currently only available for Coq, see Coq
    changes below for more details.
*** New command `proof-check-annotate' to annotate all failing proofs
    with FAIL comments.
*** Don't ask about killing the proof assistant when quitting Emacs and
    thereby the Proof General session.

** Coq changes
*** support Coq 8.19
**** New option coq-compile-coqdep-warnings to configure the warning
     command line argument (-w) of coqdep. The default of this option
     is +module-not-found to let Proof General reliably detect missing
     modules as coqdep error.
*** Renew support for proof-tree visualization, see description in
    generic changes above.
*** New command `proof-check-report to generates the proof status
    of all opaque proofs. This command is useful for a development
    process where invalid proofs are permitted and vos compilation and
    the omit proofs feature are used to work at the most interesting
    or challenging point instead of on the first invalid proof. The
    command generates a list of all opaque proofs in the current
    buffer together with the information whether the proof script is
    currently valid or invalid. The command can also be run in batch
    mode, for instance in a continuous integration environment.
*** New command `proof-check-annotate' to annotate all failing proofs
    with FAIL comments. Useful in the development process as described
    above to ensure all currently failing proofs are marked as such.
*** flag Printing Parentheses and Printing Notations can be set/unset
    via menu and Coq keymap (C-c C-a C-9 and C-c C-a C-0 for
    Parentheses (optimized for British and American keyboards); C-c
    C-a n and C-c C-a N for Notations).
*** New options coq-compile-extra-coqc-arguments and
    coq-compile-extra-coqdep-arguments to configure additional
    command line arguments to calls of, respetively, coqc and coqdep